--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    image: orange:build
+    image: orange:v0.7.4
     ports:
     - 7777
     - 8888
