--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     - 8888
     - 9999
     environment:
-    - NGINX_DNS=8.8.8.8
+    - NGINX_DNS=8.8.8.8 114.114.114.114
     - NGINX_WORKER_PROCESSES=2
     - ORANGE_DB_HOST=192.168.31.213
     - ORANGE_DB_PORT=3306
