postrotate 使用 orange reload 方式

--- a/orange.logrotate.conf
+++ b/orange.logrotate.conf
@@ -6,7 +6,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -18,7 +18,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -30,7 +30,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -42,7 +42,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -54,7 +54,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -66,7 +66,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -78,7 +78,7 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
 
@@ -90,6 +90,6 @@
     create 0600 root root
 
     postrotate
-        /usr/local/bin/nginx -s reload
+        /usr/local/bin/orange reload
     endscript
 }
